# app/routes/call.ts
@@ -3,8 +3,9 @@ import expressAsyncHandler from "express-async-handler";
 import { createResponse } from "../helper/response";
 import { catchError, validate } from "../middleware/validation";
 import { authMiddleware, ROLE } from "../middleware/auth";
-import { getCallLog, makeCall, updateCallStatus } from "../services/call";
+import { getCall, getCallLog, makeCall, updateCallStatus } from "../services/call";
 import twilio from "twilio";
+import { checkPermission } from "../middleware/check-permission";
 
 const router = express.Router();
 
@@ -36,17 +37,30 @@ router.post(
 router.get(
   "/log",
   authMiddleware,
+  checkPermission([ROLE.USER]),
+  validate("call:get"),                            
+  catchError,
+  expressAsyncHandler(async (req, res) => {
+    let userId =  req?.user?._id || "";
+    const response = await getCallLog(userId, req.query);
+    res.send(createResponse(response, "Call logs fetched successfully"));
+  })
+)
+
+router.get(
+  "/",
+  authMiddleware,
   validate("call:get"),                            
   catchError,
   expressAsyncHandler(async (req, res) => {
     let userId =  req?.user?._id || "";
     const userRole = (req?.user as any)?.role || "";
     const userToSearch = (req.query.userId as string) || "";
-    if(userRole ==ROLE.ADMIN && userToSearch) {
-      userId = userToSearch;
-    } 
-    const response = await getCallLog(userId, req.query);
-    res.send(createResponse(response, "Call logs fetched successfully"));
+    if(userRole == ROLE.ADMIN) {
+      userId = userToSearch ? userToSearch : "";
+    }
+    const response = await getCall(userId, req.query);
+    res.send(createResponse(response, "Call history fetched successfully"));
   })
 )
 
