# app/routes/notification.ts
@@ -3,7 +3,8 @@ import expressAsyncHandler from "express-async-handler";
 import { createResponse } from "../helper/response";
 import { catchError, validate, validateIdParam } from "../middleware/validation";
 import * as notificationService from "../services/notification";
-import { authMiddleware } from "../middleware/auth";
+import { authMiddleware, ROLE } from "../middleware/auth";
+import { checkPermission } from "../middleware/check-permission";
 
 const router = express.Router();
 
@@ -11,6 +12,7 @@ const router = express.Router();
 router.put(
   "/:id",
   authMiddleware,
+  checkPermission([ROLE.USER]),
   validateIdParam("id"),
   catchError,
   expressAsyncHandler(async (req, res) => {
@@ -24,10 +26,16 @@ router.put(
 router.get(
   "/",
   authMiddleware,
+  checkPermission([ROLE.USER, ROLE.ADMIN]),
   validate("notification:get"),
   catchError,
   expressAsyncHandler(async (req, res) => {
-    const userId =  req?.user?._id || "";
+    let userId =  req?.user?._id || "";
+    const userRole = (req?.user as any)?.role || "";
+    const userToSearch = (req.query.userId as string) || "";
+    if(userRole ==ROLE.ADMIN) {
+      userId = userToSearch ? userToSearch : "";
+    }
     const data = await notificationService.getNotification(userId, req.query);
     res.send(createResponse(data, "Notification list fetched succesfully"))
   })
@@ -36,6 +44,7 @@ router.get(
 router.get(
   "/:id",
   authMiddleware,
+  checkPermission([ROLE.USER, ROLE.ADMIN]),
   validateIdParam("id"),
   catchError,
   expressAsyncHandler(async (req, res) => {
@@ -43,6 +52,19 @@ router.get(
     const notificationId: string = req.params.id;
     const data = await notificationService.getNotificationById(userId, notificationId);
     res.send(createResponse(data, "Notification detail fetched successfully"))
+  })
+)
+
+router.post(
+  "/send",
+  authMiddleware,
+  checkPermission([ROLE.ADMIN]),
+  validate("notification:send"),
+  catchError,
+  expressAsyncHandler(async (req, res) => {
+    const userId =  req?.user?._id || "";
+    const data = await notificationService.sendNotification(userId, req.body);
+    res.send(createResponse(data, "Notification sent succesfully"))
   })
 )
 
